--- a/Pages/Login/www/index.html
+++ b/Pages/Login/www/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-    <form action="./Login.md/env/port/3000/login" method="post">
+    <form action="/CSC-WebApps/Course/Pages/Login/Login.md/env/port/3000/login" method="post">
         <h2>Login</h2>
         <div class="input-field">
             <input type="text" name="username" id="username" placeholder="Enter Username">
