--- a/Pages/Login/www/home.html
+++ b/Pages/Login/www/home.html
@@ -6,7 +6,7 @@
 
 <body>
   <form action="/CSC-WebApps/Course/Pages/Login/Login.md/env/port/3000/stash" method="post">
-      <h2>Login</h2>
+      <h2>Your secrets are safe with us 🤫</h2>
       <div class="input-field">
           <input type="text" name="secret" id="secret" placeholder="Enter Secret">
       </div>
